--- a/css/styles.css
+++ b/css/styles.css
@@ -1,64 +1,80 @@
-html{
-    font-size: 62.5%; /*Reset para REMS 62.5% = 10PX DE 16PX*/
+html {
+    font-size: 62.5%;
+    /*Reset para REMS 62.5% = 10PX DE 16PX*/
     box-sizing: border-box;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
 
-body{
+body {
     font-family: 'Lato', sans-serif;
     font-size: 1.6rem;
 }
 
+
 /*globales*/
-.contenedor{
-    max-width: 120rem; /*es igual a 1200px*/
+
+.contenedor {
+    width: 95%;
+    max-width: 120rem;
+    /*es igual a 1200px*/
     margin-left: auto;
     margin: 0 auto;
 }
-h1{
+
+h1 {
     font-size: 3.8rem;
-
 }
-h2{
+
+h2 {
     font-size: 3.4rem;
-
 }
-h3{
+
+h3 {
     font-size: 3rem;
 }
-h4{
+
+h4 {
     font-size: 2rem;
 }
 
+
 /*Utilidades*/
-.contenido-centrado{
+
+.contenido-centrado {
     max-width: 800px;
 }
-.sección{
+
+.d-block {
+    display: block !important;
+}
+
+.sección {
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
-.centrar-texto{
+
+.centrar-texto {
     text-align: center;
 }
-.fw300{
+
+.fw300 {
     font-weight: 300;
 }
-img{
+
+img {
     max-width: 100%;
 }
 
+
 /*BOTONES*/
-.boton:hover{
-    cursor:pointer;
-}
-.d-block{
-    display: block !important;
-}
-.boton{
-color: #F5F5F5;
+
+.boton {
+    color: #F5F5F5;
     font-weight: 700;
     text-decoration: none;
     font-size: 1.8rem;
@@ -68,122 +84,220 @@ color: #F5F5F5;
     text-align: center;
     border: none;
     border-radius: 2rem;
+    display: block;
+    flex: 0 0 100%;
 }
-.boton-amarillo{
+
+@media (min-width: 768px) {
+    .boton {
+        display: inline-block;
+        flex: 0 0 auto;
+    }
+}
+
+.boton:hover {
+    cursor: pointer;
+}
+
+.boton-amarillo {
     background-color: #E08709;
 }
-.boton-verde{
-background-color: green;
+
+.boton-verde {
+    background-color: green;
 }
-.ver-todas{
-    display:flex;
+
+.ver-todas {
+    display: flex;
     justify-content: flex-end;
 }
 
 
-
 /*header*/
-.inicio
-{
+
+.inicio {
     background-image: url("../img/header.jpg");
     background-position: center center;
     background-size: cover;
     height: 100vh;
     min-height: 600px;
 }
-.header-nosotros{
+
+.header-nosotros {
     background-color: #333333;
     padding: 2rem 0 3rem 0rem;
 }
-.contenido-header{
+
+.contenido-header {
     height: 100%;
-    display:flex;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
+    text-align: center;
 }
-.contenido-header h1{
+
+.contenido-header h1 {
     color: white;
     padding-bottom: 2rem;
     max-width: 60rem;
-    line-height: 5rem;
-;
+    line-height: 2;
+    text-align: center;
 }
-.barra{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 30px;
 
+@media (min-width: 768px) {
+    .contenido-header {
+        text-align: left;
+    }
 }
+
+.barra {
+    padding-top: 30px;
+}
+
+@media (min-width: 768px) {
+    .barra {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
 
 /*Navegación*/
+
 .navegación a {
     color: white;
     text-decoration: none;
-    margin-right: 20px;
-    font-size: 2rem; /*=18PX*/
+    font-size: 2rem;
+    display: block;
+    /*=18PX*/
 }
 
-.navegación a:last-of-type{
-    margin-right:none;
+@media (min-width: 768px) {
+    .navegación a {
+        display: inline-block;
+        margin-right: 20px;
+        font-size: 1.8rem
+    }
+    .navegación a:last-of-type {
+        margin-right: none;
+    }
 }
-.navegación a:hover{
+
+.navegación a:hover {
     color: green;
 }
 
-/*Iconos*/
-.iconos-nosotros{
-    display: flex;
-    justify-content: space-between;
+
+/*Mobile-Menu*/
+
+.mobile-menu img {
+    width: 5rem;
 }
-.icono{
-    flex-basis: calc(33.3% - 1rem);
+
+@media (min-width: 768px) {
+    .mobile-menu {
+        display: none;
+    }
+}
+
+.navegación:target {
+    display: block;
+}
+
+.navegación {
+    display: none;
+}
+
+@media (min-width: 768px) {
+    .navegación {
+        display: block;
+    }
+}
+
+
+/*Iconos*/
+
+@media (min-width: 768px) {
+    .iconos-nosotros {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.icono {
     text-align: center;
 }
-.icono h3{
+
+@media (min-width: 768px) {
+    .icono {
+        flex-basis: calc(33.3% - 1rem);
+    }
+}
+
+.icono h3 {
     text-transform: uppercase;
 }
+
+
 /*Anuncios*/
-.contenedor-anuncios{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin-bottom: 2rem;
+
+@media (min-width: 768px) {
+    .contenedor-anuncios {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        margin-bottom: 2rem;
+    }
 }
-.anuncio{
+
+.anuncio {
     flex-shrink: 0;
-    flex-basis: calc(33.3% - 1rem);
     border: 1px solid #B5B5B5;
     background-color: #F5F5F5;
 }
-.contenido-anuncio{
+
+@media (min-width: 768px) {
+    .anuncio {
+        flex-basis: calc(33.3% - 1rem)
+    }
+}
+
+.contenido-anuncio {
     padding: 2rem;
 }
+
 .contenido-anuncio h3,
-    margin:0;
-.contenido-anuncio p{
+.contenido-anuncio p {
     margin: 0;
 }
-.precio{
+
+.precio {
     color: green;
-    font-weight:700;
+    font-weight: 700;
 }
-.iconos-caracteristicas{
-    list-style:none;
+
+.iconos-caracteristicas {
+    list-style: none;
     padding: 0;
     display: flex;
     justify-content: space-evenly;
     flex: 1;
     max-width: 500px;
 }
-.iconos-caracteristicas li{
+
+.iconos-caracteristicas li {
     display: flex;
 }
-.iconos-caracteristicas img{
+
+.iconos-caracteristicas img {
     margin-right: 2rem;
 }
+
+
 /*contacto home*/
-.imagen-contacto{
+
+.imagen-contacto {
     background-image: url("../img/encuentra.jpg");
     height: 40rem;
     background-size: cover;
@@ -191,164 +305,217 @@ background-color: green;
     display: flex;
     align-items: center;
 }
-.contenido-contacto{
-    flex: 1;
+
+.contenido-contacto {
+    flex: 0 0 95%;
     color: #F5F5F5;
 }
-.contenido-contacto p{
+
+.contenido-contacto p {
     font-size: 1.8rem;
 }
+
+
 /*Sección inferior*/
-.seccion-inferior{
-    display: flex;
-    justify-content: space-between;
+
+@media (min-width: 768px) {
+    .seccion-inferior {
+        display: flex;
+        justify-content: space-between;
+    }
+    .seccion-inferior .blog {
+        flex-basis: 60%;
+    }
+    .seccion-inferior .testimoniales {
+        flex-basis: calc(40% - 2rem);
+    }
 }
-.seccion-inferior .blog{
-flex-basis: 60%;
-}
-.seccion-inferior .testimoniales{
-    flex-basis: calc(40% - 2rem);
-}
-.entrada-blog{
-    display: flex;
-    justify-content: space-between;
+
+.entrada-blog {
     margin-bottom: 2rem;
 }
-.entrada-blog:last-of-type{
+
+@media (min-width: 768px) {
+    .entrada-blog {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.entrada-blog:last-of-type {
     margin-bottom: 0;
 }
-.entrada-blog .imagen{
-flex-basis: 40%;
+
+.entrada-blog .imagen {
+    flex-basis: 40%;
 }
-.entrada-blog .texto-entrada{
+
+.entrada-blog .texto-entrada {
     flex-basis: calc(60% - 3rem);
 }
-.texto-entrada h4{
+
+.texto-entrada h4 {
     margin: 0;
     line-height: 1.4;
 }
-.texto-entrada a{
+
+.texto-entrada a {
     color: black;
     text-decoration: none;
 }
-.texto-entrada h4::after{
-    content:"" ;
+
+.texto-entrada h4::after {
+    content: "";
     display: block;
     width: 15rem;
     height: .5rem;
     background-color: green;
     margin-top: 1rem;
 }
-.texto-entrada span{
+
+.texto-entrada span {
     color: #E08709;
 }
+
+
 /*Testimoniales*/
-.testimonial{
+
+.testimonial {
     background-color: green;
     font-size: 2.4rem;
     padding: 2rem;
     color: #F5F5F5;
     border-radius: 2rem;
 }
-.testimonial p{
+
+.testimonial p {
     text-align: right;
 }
-.testimonial blockquote::before{
-content: "";
-    background-image:url("../img/comilla.svg");
+
+.testimonial blockquote::before {
+    content: "";
+    background-image: url("../img/comilla.svg");
     width: 4rem;
     height: 4rem;
-   position: absolute;
+    position: absolute;
     left: -2rem;
     top: -2rem;
 }
-.testimonial blockquote{
+
+.testimonial blockquote {
     padding-left: 5rem;
     position: relative;
     font-weight: 300;
 }
+
+
 /*footer*/
-.site-footer{
+
+.site-footer {
     background-color: #333333;
     margin: 0;
 }
-.copyright{
+
+.copyright {
     margin: 0;
     color: #F5F5F5;
 }
-.contenedorfooter{
-    margin-top:2rem;
-    padding: 3rem 0;
-    display: flex;
-    justify-content: space-between;
-}
-/*Internas*/
-/*Nosotros*/
-.contacto p{
 
+.contenedorfooter {
+    margin-top: 2rem;
+    padding: 3rem 0;
+    text-align: center;
 }
-.contenido-nosotros{
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-column-gap: 2rem;
+
+@media (min-width: 768px) {
+    .contenedorfooter {
+        display: flex;
+        justify-content: space-between
+    }
 }
-.texto-nosotros blockquote{
+
+
+/*Internas*/
+
+
+/*Nosotros*/
+
+@media (min-width: 768px) {
+    .contenido-nosotros {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-column-gap: 2rem;
+    }
+}
+
+.texto-nosotros blockquote {
     font-weight: 900;
-    font-size: 2rem
+    font-size: 2rem;
     margin: 0;
     padding: 3rem 0;
 }
-.resumen-propiedad{
+
+.resumen-propiedad {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
+
 /*Contacto*/
-.contacto p{
-    font-size:1.6rem;
+
+.contacto p {
+    font-size: 1.6rem;
     color: #4f4f4f;
 }
-form{
+
+form {
     font-size: 1.6rem;
-    color:black;
+    color: black;
     margin: 0;
 }
-legend{
+
+legend {
     font-size: 2.4rem;
-    color:darkred;
+    color: darkred;
 }
-label{
+
+label {
     font-weight: 700;
     text-transform: uppercase;
     display: block;
 }
+
 input:not([type="submit"]),
 textarea,
-select
-{
+select {
     padding: 1rem;
     display: block;
     padding-bottom: 2rem;
     border: none;
     border-radius: 2rem;
     width: 100%;
-    background-color:#e1e1e1e1;
+    background-color: #e1e1e1e1;
     margin-bottom: 2rem;
 }
-input[type="radio"]{
+
+input[type="radio"] {
     width: auto;
     margin: 0;
 }
-select{
+
+select {
     -webkit-appearance: none;
-    appearance:none;
+    appearance: none;
 }
-textarea{
+
+textarea {
     height: 20rem;
 }
-.forma-contacto{
+
+.forma-contacto {
     align-items: center;
     max-width: 30rem;
-    display:flex;
+    display: flex;
     justify-content: space-between;
 }
